--- a/static/css/scss/_about.scss
+++ b/static/css/scss/_about.scss
@@ -2,6 +2,11 @@
 
     margin-top: 2rem;
     margin: 0 auto;
+    padding: 0 1rem;
+
+    @include tablet {
+        width: 70%;
+    }
 
     @include laptop {
 
